# app/Http/Requests/Auth/LoginRequest.php
@@ -5,7 +5,7 @@ namespace App\Http\Requests\Auth;
 use App\Validators\RequestValidator;
 use Illuminate\Foundation\Http\FormRequest;
 
-class RegistrationRequest extends FormRequest
+class LoginRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -23,19 +23,11 @@ class RegistrationRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'name' => 'required|string|max:30|min:3',
-            'surname' => 'required|string|max:30|min:1',
-            'lastname' => 'required|string|max:30|min:1',
-            'email' => 'required|email|unique:users',
-            'password' => 'required|string|min:8|max:30'
+            'email' => 'required|email',
+            'password' => 'required|string'
         ];
     }
 
-    /**
-     * @param $validator
-     * @return void
-     * @throws \Illuminate\Validation\ValidationException
-     */
     protected function failedValidation($validator)
     {
         RequestValidator::handleValidationErrors($validator);
